force-app/main/default/objects/AuditTrail__c/AuditTrail__c.object-meta.xml
<CustomObject>
    <label>AuditTrail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AuditTrail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuditTrails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>