force-app/main/default/objects/AuditTrail__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>