force-app/main/default/objects/AuditTrail__c/fields/AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInfo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AdditionalInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>