force-app/main/default/objects/AuditTrail__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CorrelationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>