force-app/main/default/objects/AuditTrail__c/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocumentId</label>
    <referenceTo>DocumentLifecycleConfiguration__c</referenceTo>
    <relationshipLabel>AuditTrails</relationshipLabel>
    <relationshipName>AuditTrails</relationshipName>
    <type>Lookup</type>
</CustomField>