force-app/main/default/objects/AuditTrail__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>