force-app/main/default/objects/AuditTrail__c/fields/Location_City__c.field-meta.xml
<CustomField>
    <fullName>Location_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location City_</label>
    <length>255</length>
    <type>Text</type>
</CustomField>