force-app/main/default/objects/AuditTrail__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>