force-app/main/default/objects/AuditTrail__c/fields/OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OrganizationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>