force-app/main/default/objects/AuditTrail__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>