force-app/main/default/objects/AuditTrail__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RelatedRecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>