force-app/main/default/objects/AuditTrail__c/fields/Session_User__c.field-meta.xml
<CustomField>
    <fullName>Session_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AuditTrail_SessionUser</relationshipName>
    <type>Lookup</type>
</CustomField>