force-app/main/default/objects/AuditTrail__c/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SessionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>