force-app/main/default/objects/AuditTrail__c/fields/SystemInfo__c.field-meta.xml
<CustomField>
    <fullName>SystemInfo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SystemInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>