force-app/main/default/objects/AuditTrail__c/fields/Timestamps__c.field-meta.xml
<CustomField>
    <fullName>Timestamps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>