force-app/main/default/objects/AuditTrail__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>