force-app/main/default/objects/AuditTrail__c/fields/UserAgent__c.field-meta.xml
<CustomField>
    <fullName>UserAgent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserAgent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>