force-app/main/default/objects/AuditTrail__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>