force-app/main/default/objects/AuditTrail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Timestamp__c</columns>
    <columns>UserDetails__c</columns>
    <columns>AdditionalInfo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>